feat: add use case to fetch favorite prompt

--- a/src/codebase_to_llm/interface/web_ui.html
+++ b/src/codebase_to_llm/interface/web_ui.html
@@ -304,6 +304,7 @@
             <div class="user-info">
                 <span>Logged in as: <strong id="currentUser"></strong></span>
                 <button id="logoutBtn" class="btn-danger btn-sm" style="margin-left: 10px;">Logout</button>
+                <a href="/favorite-prompts-ui" class="btn-primary btn-sm" style="margin-left: 10px;">Favorite Prompts</a>
             </div>
 
             <!-- External Sources Section -->
